# mypackage

./: .pre-commit-config.yaml  LICENCE.txt  LICENSE.txt  pyproject.toml
mypackage/: utils.py
mypackage/geometry/: __init__.py  geometry.py
